[tool.poetry]
name = "devon-agent"
version = "0.1.15"
description = ""
authors = ["killind-dev <61808204+killind-dev@users.noreply.github.com>","mihir1003 <mihir1003@gmail.com>"]
readme = "README.md"
exclude = [
    "devon-tui",
    "electron",
    "newelectron",
    "devon_swe_bench_experimental"
]

[tool.poetry.dependencies]
python = ">=3.10,<4"
openai = "^1.14.1"
anthropic = "^0.20.0"
pydantic = "^2.5.0"
xmltodict = "^0.13.0"
astroid = "^3.1.0"
docker = "^7.0.0"
pytest-json-report = "^1.5.0"
pytest = "^8.1.1"
ghapi = "^1.0.5"
networkx = "^3.3"
pylint = "^3.1.0"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.30"
tenacity = "^8.2.2"
simple-parsing = {version = "^0.1.5", optional = true}
swebench = {version = "1.0.1", optional = true}
gymnasium = {version = "^0.29.1", optional = true}
datasets = {version = ">=2.14.6,<2.15.0", optional = true}
click = "^8.1.7"
posthog = "^3.5.0"
litellm = "^1.37.9"
dspy-ai = {version = "^2.4.9", optional = true}

aiosqlite = "^0.20.0"
greenlet = "^3.0.3"


chromadb = "0.5.0"

llama-index = "^0.10.45"
python-dotenv = "^1.0.1"

code-nav-devon = "^0.1.1"
numpy = "<=1.26.4"
[tool.poetry.extras]
swebench = ["swebench", "datasets", "gymnasium"]
experimental = ["dspy-ai"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
devon_agent = "devon_agent.__main__:main"